Fixed text alignment within input screen

--- a/src/style.css
+++ b/src/style.css
@@ -30,9 +30,10 @@ body{
     width: 100%;
     height: 90px;
     font-size: 24px;
-    text-align: center;
+    text-align: right;;
     border-radius: 5px;
     border: 2px solid #4e0066;
+    padding-top: 58px;
 }
 
 .allButtons button{
